2A/05_Projet_GL/src/test/deca/context/invalid/complet/14_duplication_decl_meth.deca
// Description :
//     Duplication du Decl Methode avce le meme type 
// Resultats :
//    ligne 13 : get est deja déclarée 
// Historique :
//  cree le 16/01/2024

class A {
    int get() {

    }

    int get() {

    }
}